[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "functions-framework>=3.10.2",
    "google-cloud-firestore>=2.27.0",
    "httpx>=0.28.1",
    "nanoid>=2.0.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
]

